--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,12 @@
 
 buildscript {
     repositories {
+        mavenCentral()
         google()
         jcenter()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
